# Strange-Attractor-Explorer

./: .gitignore  Cargo.toml  Readme.md  index.html  index.ts  package.json
js/: clifford_manager.ts  state_control.ts  user_interface.ts
spec/: rust.spec.js
src/: clifford.rs  image.rs  image_data.rs  lib.rs  lyapunov.rs  lyapunov_line.rs  utils.rs
